Fix spacing between form buttons

--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,6 @@
 
 body {
-  margin: 0;
+  margin: 10;
   padding: 0;
   font-family: sans-serif;
-}
-
-.primary {
-  margin: 10;
-  padding: 5;
 }
